# ContextDB

./: .gitignore  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  EMBEDDINGS.md  LICENSE  Package.swift  README.md  zola.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: contextdb.rb
Sources/ContextDB/: ContextDatabase.swift  JSONValue.swift  Models.swift  Query.swift
benches/: contextdb_bench.rs
docs/: Architecture.md  CONCEPTS.md  Concepts.md  EMBEDDINGS.md  Embeddings.md  README.md  Usage.md  _index.md  api-reference.md  architecture.md  base.md  cli.md  concepts.md  data-portability.md  embeddings.md  faq.md  glossary.md  installation.md  ios.md  lifecycle.md  performance.md  query-language.md  quickstart.md  roadmap.md  schema.md  security.md  swiftpm.md  usage.md  why.md
examples/: advanced_queries.rs  backends.rs  demo.rs  lifecycle.rs  relations.rs  sample-data.json
examples/ios/: CLAUDE.md  README.md
examples/ios/Config/: ContextDBiOS.entitlements  Shared.xcconfig  Tests.xcconfig
examples/ios/ContextDBiOS/: ContextDBFFIClient.swift  ContextDBiOS-Bridging-Header.h  ContextDBiOS.xctestplan  ContextDBiOSApp.swift
examples/ios/ContextDBiOS.xcodeproj/: project.pbxproj
examples/ios/ContextDBiOS.xcodeproj/xcshareddata/xcschemes/: ContextDBiOS.xcscheme
examples/ios/ContextDBiOS.xcworkspace/: contents.xcworkspacedata
examples/ios/ContextDBiOSPackage/: Package.swift
examples/ios/ContextDBiOSPackage/Sources/ContextDBiOSFeature/: ContentView.swift  ContextDBClient.swift
examples/ios/ContextDBiOSPackage/Tests/ContextDBiOSFeatureTests/: ContextDBiOSFeatureTests.swift
examples/ios/ContextDBiOSUITests/: ContextDBiOSUITests.swift
include/: contextdb.h  module.modulemap
scripts/: build_docs.py  build_spm_xcframework.sh  build_xcframework.sh  install.sh  ios_build.sh  package_xcframework.sh
src/: ffi.rs  lib.rs  query.rs  types.rs
src/storage/: mod.rs  sqlite.rs
templates/: base.html  index.html
tests/: cli.rs
tests/ContextDBTests/: ContextDatabaseTests.swift
