[package]
name = "contextdb"
version = "0.1.0"
edition = "2021"
description = "A semantic database for LLM applications with human-readable inspection"
license = "MIT"
repository = "https://github.com/charliewilco/contextdb"
keywords = ["database", "embeddings", "llm", "semantic-search", "vector"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "contextdb"
path = "src/bin/main.rs"
required-features = ["cli"]

[lib]
name = "contextdb"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
regex = "1"

# Vector operations
ndarray = "0.15"

# Storage backends
rusqlite = { version = "0.30", features = ["bundled"] }

# CLI dependencies
clap = { version = "4.4", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
tabled = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
dirs = { version = "5.0", optional = true }

[features]
default = []
cli = ["clap", "colored", "dialoguer", "indicatif", "dirs", "tabled"]
ffi = []

# For future HNSW index
# hnsw_rs = "0.3"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[[bench]]
name = "contextdb_bench"
harness = false

[profile.release]
lto = true
strip = true
opt-level = "z"
